--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "date-fns": "^2.11.1",
+    "dotenv-safe": "^8.2.0",
     "dotenv-save": "^1.2.0",
     "ejs": "^3.0.2",
     "expeditious-engine-redis": "^0.1.2",
